# sp1-tendermint

./: Cargo.toml
program/: Cargo.toml
program/elf/: tendermint-light-client
script/: Cargo.toml
