[package]
version = "0.1.0"
name = "tendermint-script"
edition = "2021"

[[bin]]
name = "tendermint"
path = "src/bin/main.rs"

[dependencies]
sp1-zkvm = "4.0.0"
sp1-sdk = "4.0.0"
clap = { version = "4.0", features = ["derive", "env"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
    "rust-crypto",
] }
serde_cbor = "0.11.2"
alloy-sol-types = "0.7"
dotenv = "0.15.0"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
curve25519-dalek-ng = { git = "https://github.com/sp1-patches/curve25519-dalek-ng", tag = "patch-4.1.1-sp1-4.0.0" }

[build-dependencies]
sp1-build = "4.0.0"
